--- a/index.html
+++ b/index.html
@@ -14,9 +14,26 @@
 			height: 100vh;
 		}
 
+		.car{
+			position: fixed;
+			width: 20%;
+			top: 30%;
+			left: 30%;
+			z-index: 9;
+			transform: rotate(90deg);
+		}
+
+		.car img{
+			width: 100%;
+			height: auto;
+		}
+
 	</style>
 </head>
 <body>
+	<div class="car">
+		<img src="car.png" alt="">
+	</div>
 	
 	<div class="wrap">
 		<div class="container">
