--- a/index.html
+++ b/index.html
@@ -11,7 +11,14 @@
 
 		.child{
 			width: 100%;
-			height: 100vh;
+			position: relative;
+			/* height: 100vh; */
+		}
+
+		.child img{
+			width: 100%;
+			height: auto;
+			top: 0;
 		}
 
 		.car{
@@ -37,11 +44,18 @@
 	
 	<div class="wrap">
 		<div class="container">
-			<div class="child" style="background: pink"></div>
-			<div class="child" style="background: purple"></div>
-			<div class="child" style="background: green"></div>
-			<div class="child" style="background: lightgrey"></div>
-			<div class="child" style="background: lightblue"></div>
+			<div class="child" style="background: pink">
+				<img src="tower4.jpg" alt="">
+			</div>
+			<div class="child" style="background: purple">
+				<img src="tower3.jpg" alt="">
+			</div>
+			<div class="child" style="background: green">
+				<img src="tower2.jpg" alt="">
+			</div>
+			<div class="child" style="background: lightgrey">
+				<img src="tower1.jpeg" alt="">
+			</div>
 		</div>	
 	</div>
 
